Remove cron functionality

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -1,6 +1,4 @@
 set(carbon_SRCS
-    ${crontablib_SRCS}
-    cronwidget.cpp
     excludefile.cpp
     excludewidget.cpp
     generaloptionswidget.cpp
@@ -11,28 +9,24 @@ set(carbon_SRCS
     sessiondialog.cpp
     session.cpp
     sessionwidget.cpp
-    syncschedulewidget.cpp
     treewidget.cpp
     basicitemdelegate.cpp)
 
 set(carbon_MOC_HDRS
-    cronwidget.h
     excludewidget.h
     generaloptionswidget.h
     mainwindow.h
     rsyncoptionswidget.h
     runnerdialog.h
     sessiondialog.h
-    sessionwidget.h
-    syncschedulewidget.h)
+    sessionwidget.h)
 
 set(carbon_UIS
     excludewidget.ui
     generaloptionswidget.ui
     rsyncoptionswidget.ui
     runnerwidget.ui
-    sessionwidget.ui
-    syncschedulewidget.ui)
+    sessionwidget.ui)
 
 set(carbon_RCS carbon.qrc)
 
@@ -42,14 +36,13 @@ QT5_ADD_RESOURCES(carbon_RC_SRCS ${carbon_RCS})
 
 include_directories (${CMAKE_SOURCE_DIR}
                      ${CMAKE_SOURCE_DIR}/support
-                     ${CMAKE_SOURCE_DIR}/crontab
                      ${CMAKE_CURRENT_SOURCE_DIR}
                      ${CMAKE_CURRENT_BINARY_DIR}
                      ${CMAKE_BINARY_DIR}
                      ${QTINCLUDES})
 
 add_executable(carbon ${carbon_SRCS} ${carbon_MOC_SRCS} ${carbon_UI_HDRS} ${carbon_RC_SRCS})
-target_link_libraries(carbon support crontab ${QTLIBS})
+target_link_libraries(carbon support ${QTLIBS})
 install(TARGETS carbon RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
 set(XDG_APPS_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/applications")
 install(FILES carbon.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
