--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -1,2 +1,3 @@
 configure_file (carbon-runner.cmake ${CMAKE_CURRENT_BINARY_DIR}/carbon-runner @ONLY)
-install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/carbon-runner ${CMAKE_CURRENT_BINARY_DIR}/carbon-pkexec DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${CMAKE_PROJECT_NAME}/scripts)
+install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/carbon-runner carbon-terminate
+	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${CMAKE_PROJECT_NAME}/scripts)
